@@ -2,6 +2,7 @@ package npg_qc::autoqc::checks::spatial_filter;
 
 use Moose;
 use namespace::autoclean;
+use Carp;
 
 extends qw(npg_qc::autoqc::checks::check);
 
@@ -9,7 +10,10 @@ our $VERSION = '0';
 
 override 'execute' => sub {
 	my ($self) = @_;
-  $self->result->parse_output(); #read stderr from spatial_filter -a on stdin ....
+  my $filter_stats_file_name_glob = $self->qc_in . q{/} . $self->id_run . '_' . $self->position . q{*.filter.stats};
+  my @filter_stats_files = glob $filter_stats_file_name_glob or
+    croak "Cannot find any filter stats files using $filter_stats_file_name_glob";
+  $self->result->parse_output(\@filter_stats_files); #read stderr from spatial_filter -a for each sample
 	return 1;
 };
 
